matrix_calc.output
Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input line

    3 line: matrix_definition SEMICOLON
    4     | print_expr SEMICOLON

    5 matrix_definition: NAME EQUAL expr

    6 print_expr: PRINT expr

    7 elements: ELEMENT
    8         | elements COMMA ELEMENT

    9 rows: row
   10     | rows COMMA row

   11 row: LBRACKET elements RBRACKET

   12 expr: expr ADD term
   13     | expr SUB term
   14     | term

   15 term: term MUL factor
   16     | term DIV factor
   17     | factor

   18 factor: LC expr RC
   19       | SUB factor
   20       | NAME
   21       | FUNCTION LC expr RC
   22       | factor TRSNAPOSE
   23       | LBRACKET rows RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
ELEMENT (258) 7 8
NAME (259) 5 20
FUNCTION (260) 21
ADD (261) 12
SUB (262) 13 19
MUL (263) 15
DIV (264) 16
COMMA (265) 8 10
LBRACKET (266) 11 23
RBRACKET (267) 11 23
SEMICOLON (268) 3 4
LC (269) 18 21
RC (270) 18 21
TRSNAPOSE (271) 22
EQUAL (272) 5
PRINT (273) 6


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
input (20)
    on left: 1 2, on right: 0 2
line (21)
    on left: 3 4, on right: 2
matrix_definition (22)
    on left: 5, on right: 3
print_expr (23)
    on left: 6, on right: 4
elements (24)
    on left: 7 8, on right: 8 11
rows (25)
    on left: 9 10, on right: 10 23
row (26)
    on left: 11, on right: 9 10
expr (27)
    on left: 12 13 14, on right: 5 6 12 13 18 21
term (28)
    on left: 15 16 17, on right: 12 13 14 15 16
factor (29)
    on left: 18 19 20 21 22 23, on right: 15 16 17 19 22


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . line

    $end   shift, and go to state 2
    NAME   shift, and go to state 3
    PRINT  shift, and go to state 4

    line               go to state 5
    matrix_definition  go to state 6
    print_expr         go to state 7


state 2

    0 $accept: input $end .

    $default  accept


state 3

    5 matrix_definition: NAME . EQUAL expr

    EQUAL  shift, and go to state 8


state 4

    6 print_expr: PRINT . expr

    NAME      shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SUB       shift, and go to state 11
    LBRACKET  shift, and go to state 12
    LC        shift, and go to state 13

    expr    go to state 14
    term    go to state 15
    factor  go to state 16


state 5

    2 input: input line .

    $default  reduce using rule 2 (input)


state 6

    3 line: matrix_definition . SEMICOLON

    SEMICOLON  shift, and go to state 17


state 7

    4 line: print_expr . SEMICOLON

    SEMICOLON  shift, and go to state 18


state 8

    5 matrix_definition: NAME EQUAL . expr

    NAME      shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SUB       shift, and go to state 11
    LBRACKET  shift, and go to state 12
    LC        shift, and go to state 13

    expr    go to state 19
    term    go to state 15
    factor  go to state 16


state 9

   20 factor: NAME .

    $default  reduce using rule 20 (factor)


state 10

   21 factor: FUNCTION . LC expr RC

    LC  shift, and go to state 20


state 11

   19 factor: SUB . factor

    NAME      shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SUB       shift, and go to state 11
    LBRACKET  shift, and go to state 12
    LC        shift, and go to state 13

    factor  go to state 21


state 12

   23 factor: LBRACKET . rows RBRACKET

    LBRACKET  shift, and go to state 22

    rows  go to state 23
    row   go to state 24


state 13

   18 factor: LC . expr RC

    NAME      shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SUB       shift, and go to state 11
    LBRACKET  shift, and go to state 12
    LC        shift, and go to state 13

    expr    go to state 25
    term    go to state 15
    factor  go to state 16


state 14

    6 print_expr: PRINT expr .
   12 expr: expr . ADD term
   13     | expr . SUB term

    ADD  shift, and go to state 26
    SUB  shift, and go to state 27

    $default  reduce using rule 6 (print_expr)


state 15

   14 expr: term .
   15 term: term . MUL factor
   16     | term . DIV factor

    MUL  shift, and go to state 28
    DIV  shift, and go to state 29

    $default  reduce using rule 14 (expr)


state 16

   17 term: factor .
   22 factor: factor . TRSNAPOSE

    TRSNAPOSE  shift, and go to state 30

    $default  reduce using rule 17 (term)


state 17

    3 line: matrix_definition SEMICOLON .

    $default  reduce using rule 3 (line)


state 18

    4 line: print_expr SEMICOLON .

    $default  reduce using rule 4 (line)


state 19

    5 matrix_definition: NAME EQUAL expr .
   12 expr: expr . ADD term
   13     | expr . SUB term

    ADD  shift, and go to state 26
    SUB  shift, and go to state 27

    $default  reduce using rule 5 (matrix_definition)


state 20

   21 factor: FUNCTION LC . expr RC

    NAME      shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SUB       shift, and go to state 11
    LBRACKET  shift, and go to state 12
    LC        shift, and go to state 13

    expr    go to state 31
    term    go to state 15
    factor  go to state 16


state 21

   19 factor: SUB factor .
   22       | factor . TRSNAPOSE

    TRSNAPOSE  shift, and go to state 30

    $default  reduce using rule 19 (factor)


state 22

   11 row: LBRACKET . elements RBRACKET

    ELEMENT  shift, and go to state 32

    elements  go to state 33


state 23

   10 rows: rows . COMMA row
   23 factor: LBRACKET rows . RBRACKET

    COMMA     shift, and go to state 34
    RBRACKET  shift, and go to state 35


state 24

    9 rows: row .

    $default  reduce using rule 9 (rows)


state 25

   12 expr: expr . ADD term
   13     | expr . SUB term
   18 factor: LC expr . RC

    ADD  shift, and go to state 26
    SUB  shift, and go to state 27
    RC   shift, and go to state 36


state 26

   12 expr: expr ADD . term

    NAME      shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SUB       shift, and go to state 11
    LBRACKET  shift, and go to state 12
    LC        shift, and go to state 13

    term    go to state 37
    factor  go to state 16


state 27

   13 expr: expr SUB . term

    NAME      shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SUB       shift, and go to state 11
    LBRACKET  shift, and go to state 12
    LC        shift, and go to state 13

    term    go to state 38
    factor  go to state 16


state 28

   15 term: term MUL . factor

    NAME      shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SUB       shift, and go to state 11
    LBRACKET  shift, and go to state 12
    LC        shift, and go to state 13

    factor  go to state 39


state 29

   16 term: term DIV . factor

    NAME      shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SUB       shift, and go to state 11
    LBRACKET  shift, and go to state 12
    LC        shift, and go to state 13

    factor  go to state 40


state 30

   22 factor: factor TRSNAPOSE .

    $default  reduce using rule 22 (factor)


state 31

   12 expr: expr . ADD term
   13     | expr . SUB term
   21 factor: FUNCTION LC expr . RC

    ADD  shift, and go to state 26
    SUB  shift, and go to state 27
    RC   shift, and go to state 41


state 32

    7 elements: ELEMENT .

    $default  reduce using rule 7 (elements)


state 33

    8 elements: elements . COMMA ELEMENT
   11 row: LBRACKET elements . RBRACKET

    COMMA     shift, and go to state 42
    RBRACKET  shift, and go to state 43


state 34

   10 rows: rows COMMA . row

    LBRACKET  shift, and go to state 22

    row  go to state 44


state 35

   23 factor: LBRACKET rows RBRACKET .

    $default  reduce using rule 23 (factor)


state 36

   18 factor: LC expr RC .

    $default  reduce using rule 18 (factor)


state 37

   12 expr: expr ADD term .
   15 term: term . MUL factor
   16     | term . DIV factor

    MUL  shift, and go to state 28
    DIV  shift, and go to state 29

    $default  reduce using rule 12 (expr)


state 38

   13 expr: expr SUB term .
   15 term: term . MUL factor
   16     | term . DIV factor

    MUL  shift, and go to state 28
    DIV  shift, and go to state 29

    $default  reduce using rule 13 (expr)


state 39

   15 term: term MUL factor .
   22 factor: factor . TRSNAPOSE

    TRSNAPOSE  shift, and go to state 30

    $default  reduce using rule 15 (term)


state 40

   16 term: term DIV factor .
   22 factor: factor . TRSNAPOSE

    TRSNAPOSE  shift, and go to state 30

    $default  reduce using rule 16 (term)


state 41

   21 factor: FUNCTION LC expr RC .

    $default  reduce using rule 21 (factor)


state 42

    8 elements: elements COMMA . ELEMENT

    ELEMENT  shift, and go to state 45


state 43

   11 row: LBRACKET elements RBRACKET .

    $default  reduce using rule 11 (row)


state 44

   10 rows: rows COMMA row .

    $default  reduce using rule 10 (rows)


state 45

    8 elements: elements COMMA ELEMENT .

    $default  reduce using rule 8 (elements)
